--- a/index.html
+++ b/index.html
@@ -76,17 +76,29 @@
     <h2 class="about-sections">Наша команда</h2>
     <ul class="about-scroll list">
         <li class="team-item"> <img src="./images/team-member1.jpg" alt="Ігор Дем'яненко" width="270">
+            <div class="team-description">
             <h3 class="about-names">Ігор Дем'яненко</h3>
-        <p lang="en" class="about-jobs">Product Designer</p></li>
+        <p lang="en" class="about-jobs">Product Designer</p>
+    </div>
+    </li>
     <li class="team-item"> <img src="./images/team-member2.jpg" alt="Ольга Рєпіна" width="270">
+        <div class="team-description">
         <h3 class="about-names">Ольга Рєпіна</h3>
-    <p lang="en" class="about-jobs">Frontend Developer</p></li>
+    <p lang="en" class="about-jobs">Frontend Developer</p>
+</div>
+</li>
     <li class="team-item"><img src="./images/team-member3.jpg" alt="Микола Тарасов" width="270">
+        <div class="team-description">
         <h3 class="about-names">Микола Тарасов</h3>
-    <p lang="en" class="about-jobs">Marketing</p></li>
+    <p lang="en" class="about-jobs">Marketing</p>
+</div>
+</li>
     <li class="team-item"><img src="./images/team-member4.jpg" alt="Михайло Єрмаков" width="270">
+        <div class="team-description">
         <h3 class="about-names">Михайло Єрмаков</h3>
-    <p lang="en" class="about-jobs">UI Designer</p></li>
+    <p lang="en" class="about-jobs">UI Designer</p>
+</div>
+</li>
     </ul>
     </div>
 </section>
