--- a/index.html
+++ b/index.html
@@ -106,13 +106,20 @@
     <footer class="page-footer">
         <div class="container footer-container">
             <a href="./index.html" class="footer-logo"> <span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
-            <address class="contact-information">
-                <ul class="contact-detail list">
-                    <li class="contact-address"><a href="https://goo.gl/maps/zb56BNehS5EqS8ZaA" rel="noopener" target="_blank">м. Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="contact-link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="contact-link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-        </address>
+            <address class="contact-address">
+                <ul class="footer-contacts-list">
+                    <li class="footer-contact-item list">
+                        <a href="https://goo.gl/maps/eDtE6KMM95kPjkAP6" target="_blank" rel="noopener noreferrer"
+                            class="map-link link">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="footer-contact-item list">
+                        <a href="mailto:info@example.com" class="footer-contact-link link">info@example.com</a>
+                    </li>
+                    <li class="footer-contact-item list">
+                        <a href="tel:+380991111111" class="footer-contact-link link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
     </footer>
 </body>
