--- a/portfolio.html
+++ b/portfolio.html
@@ -45,63 +45,63 @@
 </ul>
 <ul class="project list">
     <li class="project-list"> 
-        <img src="./images/screen.jpg" alt="Розділ команди веб-сайту" width="370"/> 
+        <img src="./images/screen.jpg" alt="Розділ команди веб-сайту" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Технокряк</h2> 
         <p class="project-type">Веб-сайт</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/basketball-players.jpg" alt="Два гравці баскетбольних команд із м'ячем" width="370"/> 
+        <img src="./images/basketball-players.jpg" alt="Два гравці баскетбольних команд із м'ячем" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2> 
         <p class="project-type">Дизайн</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/label.jpg" alt="Банер ресторану морської їжі" width="370"/> 
+        <img src="./images/label.jpg" alt="Банер ресторану морської їжі" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Ресторан <span lang="en">Seafood</span></h2> 
         <p class="project-type">Додаток</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/headphones.jpg" alt="Чорні навушники" width="370"/> 
+        <img src="./images/headphones.jpg" alt="Чорні навушники" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Проєкт <span lang="en">Prime</span></h2> 
         <p class="project-type">Маркетинг</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/boxes.jpg" alt="Дві коробки" width="370"/> 
+        <img src="./images/boxes.jpg" alt="Дві коробки" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Проєкт <span lang="en">Boxes</span></h2> 
         <p class="project-type">Додаток</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/tv.jpg" alt="Домашня сторінка вебсайту" width="370"/> 
+        <img src="./images/tv.jpg" alt="Домашня сторінка вебсайту" width="370"> 
         <div class="project-description">
         <h2 lang="en" class="project-name">Inspiration has no Borders</h2> 
         <p class="project-type">Веб-сайт</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/book.jpg" alt="Буклет дизайнерської компанії" width="370"/> 
+        <img src="./images/book.jpg" alt="Буклет дизайнерської компанії" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Видання <span lang="en">Limited Edition</span></h2> 
         <p class="project-type">Дизайн</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/tag.jpg" alt="Ярлик із написом" width="370"/> 
+        <img src="./images/tag.jpg" alt="Ярлик із написом" width="370"> 
         <div class="project-description">
         <h2 class="project-name">Проєкт <span lang="en">LAB</span></h2> 
         <p class="project-type">Маркетинг</p> 
         </div>
     </li>
     <li class="project-list"> 
-        <img src="./images/laptop.jpg" alt="Вхід в додаток з комп'ютера" width="370"/> 
+        <img src="./images/laptop.jpg" alt="Вхід в додаток з комп'ютера" width="370"> 
         <div class="project-description">
         <h2 lang="en" class="project-name">Growing Business</h2> 
         <p class="project-type">Додаток</p> 
@@ -114,12 +114,18 @@
     <footer class="page-footer">
         <div class="container footer-container">
             <a href="./index.html" class="footer-logo"> <span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
-            <address class="contact-information">
-                <ul class="contact-detail list">
-                    <li class="contact-address"><a href="https://goo.gl/maps/zb56BNehS5EqS8ZaA" rel="noopener" target="_blank">м.
-                            Київ, пр-т Лесі Українки, 26</a></li>
-                    <li class="contact-link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="contact-link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <address class="contact-address">
+                <ul class="footer-contacts-list">
+                    <li class="footer-contact-item list">
+                        <a href="https://goo.gl/maps/eDtE6KMM95kPjkAP6" target="_blank" rel="noopener noreferrer"
+                            class="map-link link">м. Київ, пр-т Лесі Українки, 26</a>
+                    </li>
+                    <li class="footer-contact-item list">
+                        <a href="mailto:info@example.com" class="footer-contact-link link">info@example.com</a>
+                    </li>
+                    <li class="footer-contact-item list">
+                        <a href="tel:+380991111111" class="footer-contact-link link">+38 096 111 11 11</a>
+                    </li>
                 </ul>
             </address>
         </div>
